# Violet

./: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  README.md  README_EN.md  \  common.cpp  common.h  dev.md  filecenter.cpp  filecenter.h  generatedata.cpp  logincenter.cpp  logincenter.h  main.cpp  mariadbhelper.cpp  mariadbhelper.h  portTest.cpp  protocol.cpp  protocol.h  readme.md  readme.me.md  redishelper.cpp  redishelper.h  server.cpp  server.h  test.cpp  threadpoolcenter.cpp  threadpoolcenter.h  unlogincenter.cpp  unlogincenter.h  violet  violet.drawio
